syntax = "proto3";
package health;

import "google/api/annotations.proto";

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/check"
    };
  }

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse) {
    option (google.api.http) = {
      get: "/watch"
    };
  }
}

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}
